# sentiment_analysis

./: .gitignore  AGENTS.md  README.md  SPEC.md  comparison.json  justfile  main.py  pyproject.toml
notebooks/: imdb_pipeline_notebook.py  single_classification_demo.py  twitter_pipeline_notebook.py
pipelines/: domain_benchmarks.py  imdb_pipeline.py  qwen35_2b_backfill.py  report_charts.py  twitter_pipeline.py
presentation/: index.md
report_tex/: biblio.bib  bibliography.bib  justfile  lastname_firstname_References.tex  lastname_firstname_title.tex  ling_581_Instructions_and_Examples.tex
report_tex/bib_styles/: acl_natbib.bst  acl_natbib_no_note.bst
report_tex/tex_styles/: acl2019.sty  acl2019_no_nums.sty  preamble.tex
